# mmm_refactored_813

./: .gitignore.txt  CMakeLists.txt  README.md  create_python_library.sh
include/dataset_creation/compression/: lz4.h
include/dataset_creation/dataset_manipulation/: bytes_to_file.h
libraries/protobuf/: CMakeLists.txt
libraries/protobuf/include/: proto_library.h
libraries/protobuf/src/: enum.proto  midi.proto  midi_internal.proto  proto_library.cpp  test.proto  track_type.proto
libraries/torch/: CMakeLists.txt
libraries/torch/include/: torch_library.h
libraries/torch/src/: torch_library.cpp
python_lib/: CMakeCache.txt  Makefile  cmake_install.cmake  newdataset.arr  newdataset.arr.header  pythontest.py
python_lib/libraries/midifile/: 80off  Makefile  asciimidi  binasc  cmake_install.cmake  createmidifile  createmidifile2  drumtab  durations  mid2mat  mid2mtb  mid2svg  midi2beep  midi2binasc  midi2melody  midi2notes  midi2skini  midi2text  midicater  midimixup  miditime  perfid  retick  shutak  smfdur  stretch  sysextest  text2midi  textmidi  toascii  tobin  tobinary  todec  tohex  type0  vlv
python_lib/libraries/pybind11/: Makefile  cmake_install.cmake
python_scripts/: create_dataset.py
python_scripts_for_testing/: build_dataset_test.py  pythontest.py
src/: lib.cpp
src/dataset_creation/data_structures/: encoder_config.h  representation.h  token_types.h  track_type.h  train_config.cpp  train_config.h
src/dataset_creation/dataset_manipulation/: bytes_to_file.cpp
src/dataset_creation/encoder/: encoder_base.h  encoder_v2.h
src/dataset_creation/midi_parsing/: adjacent_range.h  midi_io.h  util_protobuf.h
